--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lexical/react": "^0.16.1",
     "lexical": "^0.16.1",
+    "mobx": "^6.13.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
